--- a/Movie_Search_Api_App/index.html
+++ b/Movie_Search_Api_App/index.html
@@ -11,6 +11,7 @@
   <div id="search-pane">
     <input id="search-pane-input" type="text"/>
     <button id="search-pane-button">search</button>
+    <p id="search-pane-message"></p>
   </div>
   <ul id="search-results"></ul>
   <script src="./index.js"></script>
